# net-bot

./: .gitignore  README.md  README_RU.md  pyproject.toml
config/: bot.example.json  bot.json  ip_monitor.example.json  proxies.example.json  proxy_notify.example.json
net_bot/: bot_app.py  cli.py  config.py  formatters.py  ip_monitor.py  logging_setup.py  proxy_monitor.py  telegram_api.py
systemd/: net-bot-ip-monitor.service.example  net-bot-ip-monitor.timer.example  net-bot-proxy-monitor.service.example  net-bot-proxy-monitor.timer.example  net-bot.service.example
tests/: test_bot_app.py  test_config.py  test_formatters.py  test_ip_monitor.py  test_proxy_monitor.py  test_proxy_notify.py  test_telegram_api.py
